--- a/offset_print/package.json
+++ b/offset_print/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://artianRika.github.io/OffsetPrint-Web",
   "name": "offset_print",
   "version": "0.1.0",
   "private": true,
@@ -9,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
+    "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
@@ -19,7 +21,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +43,8 @@
       "last 1 safari version"
     ]
   },
-  "runArgs": ["--env file", "./offset_print/.env"]
+  "runArgs": [
+    "--env file",
+    "./offset_print/.env"
+  ]
 }
