--- a/offset_print/package.json
+++ b/offset_print/package.json
@@ -11,8 +11,11 @@
     "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
     "gh-pages": "^6.1.1",
+    "i18next": "^23.12.2",
+    "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
