--- a/offset_print/package.json
+++ b/offset_print/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://artianRika.github.io/OffsetPrint-Web",
+  "homepage": "https://artianRika.github.io/OffsetPrint-Web/home",
   "name": "offset_print",
   "version": "0.1.0",
   "private": true,
@@ -18,6 +18,7 @@
     "react-i18next": "^15.0.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "vercel": "^39.2.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
