--- a/offset_print/package.json
+++ b/offset_print/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://artianRika.github.io/OffsetPrint-Web/home",
+  "homepage": "/",
   "name": "offset_print",
   "version": "0.1.0",
   "private": true,
