--- a/offset_print/package.json
+++ b/offset_print/package.json
@@ -2,6 +2,7 @@
   "name": "offset_print",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/",
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@testing-library/jest-dom": "^5.17.0",
